Remove remaining ID attributes from SVG docs

--- a/files/en-us/web/svg/attribute/dominant-baseline/index.html
+++ b/files/en-us/web/svg/attribute/dominant-baseline/index.html
@@ -61,7 +61,7 @@ text {
  <tbody>
   <tr>
    <th scope="row">Value</th>
-   <td><code>auto</code> <a href="https://www.w3.org/TR/css3-values/#comb-one" id="ref-for-comb-one">|</a> <code>text-bottom</code> | <code>alphabetic</code> | <code>ideographic</code> | <code>middle</code> | <code>central</code> | <code>mathematical</code> | <code>hanging</code> | <code>text-top</code></td>
+   <td><code>auto</code> <a href="https://www.w3.org/TR/css3-values/#comb-one">|</a> <code>text-bottom</code> | <code>alphabetic</code> | <code>ideographic</code> | <code>middle</code> | <code>central</code> | <code>mathematical</code> | <code>hanging</code> | <code>text-top</code></td>
   </tr>
   <tr>
    <th scope="row">Default value</th>
