--- a/files/en-us/web/svg/content_type/index.html
+++ b/files/en-us/web/svg/content_type/index.html
@@ -327,7 +327,7 @@ hexdigit ::= [0-9A-Fa-f]
 <h2 id="Percentage">Percentage</h2>
 
 <dl>
-	<dt id="DataTypePercentage">&lt;percentage&gt;</dt>
+	<dt>&lt;percentage&gt;</dt>
 	<dd>
 	<p>Percentages are specified as a number followed by a "<code>%</code>" character:</p>
 
