Fix a live sample

--- a/files/en-us/web/svg/element/script/index.html
+++ b/files/en-us/web/svg/element/script/index.html
@@ -11,6 +11,8 @@ browser-compat: svg.elements.script
 
 <p class="note">While SVG's <code>script</code> element is equivalent to the HTML {{HTMLElement('script')}} element, it has some discrepancies, like it uses the {{SVGAttr('href')}} attribute instead of {{htmlattrxref('src','script')}} and it doesn't support ECMAScript modules so far (See browser compatibility below for details)</p>
 
+<h2>Example</h2>
+
 <pre class="brush: html; highlight[4]">&lt;svg viewBox="0 0 10 10" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;script&gt;
   // &lt;![CDATA[
