Fix a few live samples

--- a/files/en-us/web/svg/attribute/dominant-baseline/index.html
+++ b/files/en-us/web/svg/attribute/dominant-baseline/index.html
@@ -113,8 +113,6 @@ text {
  <dd>This value uses the top of the em box as the baseline.</dd>
 </dl>
 
-<h2 id="Example">Example</h2>
-
 <h3 id="SVG">SVG</h3>
 
 <pre class="brush: html">&lt;svg width="400" height="300" viewBox="0 0 300 300"
@@ -153,7 +151,7 @@ text {
 
 <h3 id="Result">Result</h3>
 
-<p>{{EmbedLiveSample("Example", "300", "300")}}</p>
+<p>{{EmbedLiveSample("Usage_notes", "300", "330")}}</p>
 
 <h2 id="Specifications">Specifications</h2>
 
