--- a/files/en-us/web/svg/attribute/href/index.html
+++ b/files/en-us/web/svg/attribute/href/index.html
@@ -169,17 +169,15 @@ browser-compat: svg.attributes.href
  </tbody>
 </table>
 
-<h4 id="Example">Example</h4>
-
 <pre class="brush: css hidden">html, body, svg {
   height: 100%;
 }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"&gt;
-  &lt;image href="/files/2917/fxlogo.png" x="0" y="0" height="100" width="100"/&gt;
+  &lt;image href="fxlogo.png" x="0" y="0" height="100" width="100"/&gt;
 &lt;/svg&gt;</pre>
 
-<p>{{EmbedLiveSample("Example", 200, 250)}}</p>
+<p>{{EmbedLiveSample("image", 200, 250)}}</p>
 
 <h3 id="linearGradient">linearGradient</h3>
 
