--- a/files/en-us/web/svg/element/feconvolvematrix/index.html
+++ b/files/en-us/web/svg/element/feconvolvematrix/index.html
@@ -98,7 +98,7 @@ browser-compat: svg.elements.feConvolveMatrix
     &lt;/filter&gt;
   &lt;/defs&gt;
 
-  &lt;image xlink:href="/files/12668/MDN.svg" x="0" y="0"
+  &lt;image xlink:href="MDN.svg" x="0" y="0"
       height="200" width="200" style="filter:url(#emboss);" /&gt;
 &lt;/svg&gt;</pre>
 
