Fix DL elements in the SVG docs

--- a/files/en-us/web/svg/attribute/tablevalues/index.html
+++ b/files/en-us/web/svg/attribute/tablevalues/index.html
@@ -78,8 +78,10 @@ tags:
 
 <dl>
  <dt><code>&lt;list-of-numbers&gt;</code></dt>
- <dd>This value holds a comma- and/or space-separated list of {{cssxref("number")}}s, which define a lookup table for the color component transfer function. Each number can be between <code>0</code> and <code>1</code>.</dd>
- <dd>An empty list results in an identity transfer function.</dd>
+ <dd>
+   <p>This value holds a comma- and/or space-separated list of {{cssxref("number")}}s, which define a lookup table for the color component transfer function. Each number can be between <code>0</code> and <code>1</code>.</p>
+   <p>An empty list results in an identity transfer function.</p>
+ </dd>
 </dl>
 
 <h2 id="Specifications">Specifications</h2>
