--- a/files/en-us/web/svg/attribute/xml_colon_space/index.html
+++ b/files/en-us/web/svg/attribute/xml_colon_space/index.html
@@ -52,8 +52,7 @@ browser-compat: svg.attributes.core.xml_space
 
 <dl>
  <dt><code>default</code></dt>
- <dd>With this value set, whitespace characters will be processed in this order:</dd>
- <dd>
+ <dd><p>With this value set, whitespace characters will be processed in this order:</p>
  <ol>
   <li>All newline characters are removed.</li>
   <li>All tab characters are converted into space characters.</li>
