--- a/files/en-us/web/svg/attribute/baseline-shift/index.html
+++ b/files/en-us/web/svg/attribute/baseline-shift/index.html
@@ -49,8 +49,10 @@ browser-compat: svg.attributes.presentation.baseline-shift
  <dt><code>super</code></dt>
  <dd>The dominant-baseline is shifted to the default position for superscripts.</dd>
  <dt><code>&lt;length-percentage&gt;</code></dt>
- <dd>A length value raises (positive value) or lowers (negative value) the dominant-baseline of the parent text content element by the specified length.</dd>
- <dd>A percentage value raises (positive value) or lowers (negative value) the dominant-baseline of the parent text content element by the specified percentage of the {{SVGAttr("line-height")}}.</dd>
+ <dd>
+   <p>A length value raises (positive value) or lowers (negative value) the dominant-baseline of the parent text content element by the specified length.</p>
+   <p>A percentage value raises (positive value) or lowers (negative value) the dominant-baseline of the parent text content element by the specified percentage of the {{SVGAttr("line-height")}}.</p>
+ </dd>
 </dl>
 
 <h2 id="Specifications">Specifications</h2>
